--- a/react-demo/src/index.css
+++ b/react-demo/src/index.css
@@ -12,6 +12,14 @@
   margin: 18px;
 }
 
+.dashboard {
+  background-image: url('https://images.unsplash.com/photo-1590126974110-d8cb66eadbc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+  background-size: cover;
+  background-repeat: round;
+  backdrop-filter: inherit;
+  background-blend-mode: saturation;
+}
+
 .movie {
   border: 1px solid black;
   border-radius: 10px 10px 10px 10px;
